--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ services:
  - docker
 
 before_install:
- - docker build -t DEVTEST -f Dockerfile.dev
+ - docker build -t devtest -f Dockerfile.dev
  
  
 script:
- - docker run DEVTEST npm run test -- --coverage
+ - docker run devtest npm run test -- --coverage
