--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
  - docker
 
 before_install:
- - docker build -t devtest -f Dockerfile.dev
+ - docker build -t devtest -f Dockerfile.dev .
  
  
 script:
