--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,16 @@ before_install:
  
 script:
  - docker run devtest npm run test -- --coverage
+
+deploy:
+ provider: elasticbeanstalk
+ region: "eu-west-2"
+ app: "docker-react"
+ env: "DockerReact-env"
+ bucket_name: "elasticbeanstalk-eu-west-2-688717546506"
+ bucket_path: "docker-react"
+ on:
+  branch: master
+ access_key: $AWS_ACCESS_KEY
+ secret_access_key:
+  secure: "$AWS_SECRET_KEY"
